prevent flicker

--- a/sites/truckhistoryreport.com/server/styles/index.scss
+++ b/sites/truckhistoryreport.com/server/styles/index.scss
@@ -33,7 +33,7 @@ $skin-newsletter-signup-inline-btn-color: #460c0e;
   }
 }
 /*! critical:start */
-.site-menu,
+.site-menu--open,
 .site-footer {
   .social-follow .social-follow__header {
     visibility: hidden;
